--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,12 @@ uuid = "11e0cd06-73c8-4605-b87e-fff62e6e3e17"
 authors = ["Alain Chau <phchau@ucsd.edu> and contributors"]
 version = "0.1.0"
 
+[deps]
+Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+MultivariateStats = "6f286f6a-111f-5878-ab1e-185364afe411"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+
 [compat]
 julia = "1"
 
